# ffmpegDemo

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/ffmpeg_01/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/ffmpeg/include/libavutil/: ffversion.h
app/src/main/java/com/example/ffmpeg_01/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/ffmpeg_01/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
